<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.meizu.lizhi.mygraduation.register.TeacherRegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/userEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/register_edit_back_top"
            android:padding="15dp">

            <EditText
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:maxLength="26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:textColor="@color/login_text_color"
                android:hint="@string/email"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:textAlignment="center" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/userNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userEmailLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/register_edit_back_center"
            android:padding="15dp">


            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:singleLine="true"
                android:maxLength="7"
                android:textSize="20sp"
                android:textColor="@color/login_text_color"
                android:layout_marginLeft="10dp"
                android:hint="@string/user_name"
                android:background="@null"
                android:textAlignment="center" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/userNoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userNameLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/register_edit_back_center"
            android:padding="15dp">


            <EditText
                android:id="@+id/userNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:singleLine="true"
                android:maxLength="12"
                android:inputType="number"
                android:textColor="@color/login_text_color"
                android:hint="@string/teacher_no"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:textAlignment="center" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/userPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userNoLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/register_edit_back_center"
            android:padding="15dp">


            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:digits="@string/password_digits"
                android:inputType="textWebPassword"
                android:singleLine="true"
                android:maxLength="15"
                android:textColor="@color/login_text_color"
                android:hint="@string/hint_password"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:textAlignment="center" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/schoolLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userPasswordLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/register_edit_back_center"
            android:padding="15dp">


            <Spinner
                android:id="@+id/school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:entries="@array/school"
                android:textAlignment="center" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/academyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/schoolLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/register_edit_back_bottom"
            android:padding="15dp">


            <Spinner
                android:id="@+id/academy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:entries="@array/academy"
                android:textAlignment="center" />
        </RelativeLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/academyLayout"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_btn_back"
            android:padding="10dp"
            android:text="注册" />

    </RelativeLayout>
</ScrollView>
